2004-06-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/uri-references.h (getOwner): Fix copy&paste bug.

2004-06-11  MenTaLguY  <mental@rydia.net>

	* src/sp-object.h, src/sp-object.cpp:

	  migrated several SPObject methods to C++ methods:

	  sp_object_invoke_write -> SPObject::updateRepr
	  sp_object_request_update -> SPObject::requestDisplayUpdate
	  sp_object_invoke_update -> SPObject::updateDisplay
	  sp_object_request_modified -> SPObject::requestModified
	  sp_object_invoke_modified -> SPObject::emitModified

	  (leaving deprecated wrappers in place for now)

	* src/document.cpp, src/object-edit.cpp, src/sp-clippath.cpp,
	  src/sp-defs.cpp, src/sp-ellipse.cpp, src/sp-image.cpp,
	  src/sp-item-group.cpp, src/sp-item.cpp, src/sp-line.cpp,
	  src/sp-marker.cpp, src/sp-mask.cpp, src/sp-offset.cpp,
	  src/sp-pattern.cpp, src/sp-rect.cpp, src/sp-root.cpp,
	  src/sp-shape.cpp, src/sp-spiral.cpp, src/sp-star.cpp,
	  src/sp-symbol.cpp, src/sp-text.cpp, src/sp-typeset.cpp,
	  src/sp-use.cpp, src/dialogs/stroke-style.cpp, src/sp-path.cpp:

	  transitioned to SPObject::requestDisplayUpdate and
	  SPObject::updateDisplay

	* src/arc-context.cpp, src/document.cpp, src/gradient-chemistry.cpp,
	  src/knotholder.cpp, src/main.cpp, src/rect-context.cpp,
	  src/sp-anchor.cpp, src/sp-clippath.cpp, src/sp-defs.cpp,
	  src/sp-gradient.cpp, src/sp-item-group.cpp, src/sp-item.cpp,
	  src/sp-mask.cpp, src/sp-namedview.cpp, src/sp-object-group.cpp,
	  src/sp-object.cpp, src/sp-object.h, src/sp-offset.cpp,
	  src/sp-pattern.cpp, src/sp-rect.cpp, src/sp-shape.cpp,
	  src/sp-spiral.cpp, src/sp-text.cpp, src/sp-use.cpp,
	  src/spiral-context.cpp, src/splivarot.cpp, src/star-context.cpp,
	  src/style.cpp, src/toolbox.cpp, src/dialogs/fill-style.cpp,
	  src/dialogs/stroke-style.cpp, src/extension/internal/svg.cpp:

	  transitioned to SPObject::requestModified, SPObject::emitModified,
	  and SPObject::updateRepr; also reworked "minimal" version of
	  updateRepr.
